src/objects/c2g__codaCurrencyRevaluationLineItem__c.object
<CustomObject>
    <description>Currency revaluation line detail at second level.</description>
    <fields>
        <fullName>c2g__CurrencyRevaluationSummary__c</fullName>
        <label>Currency Revaluation Summary</label>
        <referenceTo>c2g__codaCurrencyRevaluationSummary__c</referenceTo>
        <relationshipLabel>Currency Revaluation Line Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Currency Revaluation Line Items</relationshipLabel>
        <relationshipName>Currency_Revaluation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Line Item</label>
    <nameField>
        <displayFormat>CRL{000000}</displayFormat>
        <label>Currency Revaluation Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>